syntax = "proto3";

package auth;

option go_package = "genproto/auth";

message VerifyRequest {
  string token = 1;
  string routeName = 2;
}

message VerifyResponse {
  bool isAuthorised = 1;
  string message = 2;
  string name = 3;
  string emailId = 4;
  string phoneNumber = 5;
  string tenant = 6;
  string domain = 7;
  string department = 8;
  string role = 9;
  string orgName = 10;
}

message EmailTokenRequest {
  string tenantId = 1;
	string domain = 2;
	string subDomain = 3;
	string emailId = 4;
	string secretId = 5;
	string name = 6;
}

message EmailTokenResponse {
  string token = 1;
  bool isError = 2;
  string errorMessage = 3;
}

message VerifyEmailTokenRequest {
  string token = 1;
  string domain = 2;
}

message VerifyEmailTokenResponse {
  string tenantId = 1;
	string domain = 2;
	string subDomain = 3;
	string emailId = 4;
	string secretId = 5;
	string name = 6;
  bool isError = 7;
  string errorMessage = 8;
}