syntax = "proto3";

package org;

import "proto/org/type/employee.proto";
import "proto/org/type/organization.proto";
import "proto/org/type/attendance.proto";

option go_package = "genproto/org";

service OrgService {
    rpc InitOrganization(InitOrgRequest) returns (InitOrgResponse) {}
    rpc OrgEmployee(EmployeeRequest) returns (EmployeeResponse) {}
    rpc GetAttendanceInfo(AttendanceRequest) returns (AttendanceResponse) {}
}