syntax = "proto3";

package org;

option go_package = "genproto/org";

message EmployeeRequest {
  string requestType = 1;
  string domain = 2;
  string employeeId = 3;
  string departmentId = 4;
  string designation = 5;
  string name = 6;
  string role = 7;
  string imgUrl = 8;
}

message EmployeeResponse {
  bool isError = 1;
  string message = 2;
}